--- a/shop-app/pom.xml
+++ b/shop-app/pom.xml
@@ -34,6 +34,7 @@
 		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
 		<resource.delimiter>@</resource.delimiter>
 		<mq-jms-spring-boot.version>2.0.0</mq-jms-spring-boot.version>
+		<springfox.version>2.9.2</springfox.version>
 	</properties>
 
 	<dependencyManagement>
@@ -80,6 +81,16 @@
 				<groupId>com.ibm.mq</groupId>
 				<artifactId>mq-jms-spring-boot-starter</artifactId>
 				<version>${mq-jms-spring-boot.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger2</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger-ui</artifactId>
+				<version>${springfox.version}</version>
 			</dependency>
 			<!-- Cucumber dependencies -->
 			<dependency>
